test/corpus/L1/positive/cascade-parenthesized-receiver.st
"---
id: cascade-parenthesized-receiver
kind: positive
phase: parse
layer: L1
spec: anexoA:cascade.parenthesized-receiver
origin: spec-ANSI
section: cascade.parenthesized-receiver
note: cascade on a parenthesized binary expression as receiver
---"
(a + b) foo; bar
