test/corpus/L1/negative/unclosed-paren.st
"---
id: unclosed-paren
kind: negative
phase: parse
layer: L1
spec: anexoA:error.unclosed-paren
origin: spec-ANSI
section: error.unclosed-paren
note: parenthesised expression missing closing paren
codes: E_UNCLOSED_PAREN
---"
(1 + 2
